# Optimized-Chain-Matrix-Multiplication

./: Makefile  Readme.md  helper_functions.cpp  helper_functions.h  main.cu  sequence.cpp  sequence.h
.devcontainer/: devcontainer.json
docker/: Devel.Dockerfile  docker_build.sh
sw/: CMakeLists.txt  Makefile  config.xml  helper_functions.cpp  helper_functions.h  main.cpp  main.cu  matrix.cu  sequence.cpp  sequence.h  sequence_gpu.cu  sequence_gpu.h
